fix the machine sizing.

--- a/index.html
+++ b/index.html
@@ -272,6 +272,16 @@
             .lock-text {
                 font-size: 11vw;
             }
+
+            .svg-machine {
+                width: 380px;
+                height: 152px;
+            }
+
+            .svg-machine svg {
+                width: 380px;
+                height: 152px;
+            }
         }
     </style>
 </head>
